# docuchango

./: .codecov.yml  AGENTS.md  CHANGELOG.md  COVERAGE_PRIORITIES.txt  COVERAGE_ROADMAP.md  COVERAGE_VISUAL.txt  DEPLOYMENT.md  FRONTMATTER_ISSUES_ANALYSIS.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICK_WINS.md  READABILITY_FEATURE.md  README.md  RENAME_COMPLETE.md  TEST_COVERAGE_GUIDE.md  install.ps1  install.sh  pyproject.toml  test_install.py
.github/workflows/: ci.yml  publish-schema.yml  publish.yml  release.yml
docs/: AGENT_GUIDE.md  BEST_PRACTICES.md  BOOTSTRAP_GUIDE.md
docs-cms/: docs-project.yaml
docs-cms/adr/: adr-001-pydantic-schema-validation.md  adr-002-click-cli-framework.md  adr-003-pytest-tmp-path-testing.md
docs-cms/memos/: memo-001-frontmatter-auto-fix-priorities.md  memo-002-test-coverage-roadmap.md
docs-cms/prd/: prd-001-validation-framework.md
docs-cms/rfcs/: rfc-001-document-template-system.md  rfc-002-readability-validation.md
docuchango/: __init__.py  cli.py  config_paths.py  naming.py  readability.py  schemas.py  validator.py
docuchango/fixes/: __init__.py  bulk_update.py  code_blocks.py  docs.py  frontmatter.py  id_compression.py  internal_links.py  mdx_syntax.py  migration_syntax.py  proto_imports.py  tags.py  timestamps.py  whitespace.py  yaml_utils.py
docuchango/templates/: README.md  adr-000-template.md  docs-project.schema.json  docs-project.yaml  memo-000-template.md  prd-000-template.md  rfc-000-template.md
docuchango/testing/: __init__.py  assertions.py  cli.py  docker.py  fixtures.py  health.py
examples/docs-cms/: docs-project.yaml  fix_frontmatter.sh
examples/docs-cms/memos/: memo-001-docs-cms-launch.md
examples/docs-cms/rfcs/: rfc-001-automated-doc-generation.md
examples/docs-cms/templates/: adr-template.md  memo-template.md  rfc-template.md
scripts/: build_static_site.py
templates/: README.md  adr-amendment-template.md  adr-template.md  frd-template.md  generic-doc-template.md  memo-template.md  prd-template.md  prdfaq-template.md  rfc-template.md
tests/: conftest.py  test_bug_fixes.py  test_bulk_update.py  test_bulk_update_comprehensive.py  test_cli_commands.py  test_code_blocks.py  test_config_loading.py  test_coverage_improvements.py  test_doc_links.py  test_document_indexes.py  test_documentation_references.py  test_fixes.py  test_frontmatter.py  test_frontmatter_comprehensive.py  test_frontmatter_fixes.py  test_id_compression.py  test_init_command.py  test_internal_links.py  test_link_validation.py  test_mdx_code_blocks.py  test_mdx_syntax.py  test_migration_syntax.py  test_naming.py  test_readability.py  test_readability_metrics.py  test_readability_optional.py  test_schemas.py  test_tags_comprehensive.py  test_tags_fixes.py  test_timestamp_fixes.py  test_timestamps_comprehensive.py  test_validate_fix_integration.py  test_validator.py  test_whitespace_comprehensive.py  test_whitespace_fixes.py
